@@ -1407,8 +1407,11 @@ void CMscdex::LoadState( std::istream& stream )
 
 void POD_Save_DOS_Mscdex( std::ostream& stream )
 {
+	WRITE_POD( &dos_kernel_disabled, dos_kernel_disabled );
 	if (!dos_kernel_disabled) {
-		for (Bit8u drive_unit=0; drive_unit<mscdex->GetNumDrives(); drive_unit++) {
+		Bit16u dnum=mscdex->GetNumDrives();
+		WRITE_POD( &dnum, dnum);
+		for (Bit8u drive_unit=0; drive_unit<dnum; drive_unit++) {
 			TMSF pos, start, end;
 			bool playing, pause;
 
@@ -1430,8 +1433,18 @@ void POD_Save_DOS_Mscdex( std::ostream& stream )
 
 void POD_Load_DOS_Mscdex( std::istream& stream )
 {
+	READ_POD( &dos_kernel_disabled, dos_kernel_disabled );
 	if (!dos_kernel_disabled) {
-		for (Bit8u drive_unit=0; drive_unit<mscdex->GetNumDrives(); drive_unit++) {
+		Bit16u dnum;
+		READ_POD( &dnum, dnum);
+        if (mscdex->GetNumDrives()>dnum) {
+            mscdex->numDrives=dnum;
+            for (Bit16u i=dnum; i<mscdex->GetNumDrives(); i++) {
+                delete mscdex->cdrom[i];
+                mscdex->cdrom[i] = 0;
+            }
+        }
+		for (Bit8u drive_unit=0; drive_unit<dnum; drive_unit++) {
 			TMSF pos, start, end;
 			Bit32u msf_time, play_len;
 			bool playing, pause;
